[package]
name = "aws-ec2"
version = "0.1.0"
edition = "2021"
description = "A tool to run commands on AWS EC2 instances."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/aws-ec2"
documentation = "https://docs.rs/aws-ec2/"
readme = "./README.md"

[dependencies]
aws-config = "0.56.1"
aws-sdk-ec2 = "0.31.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.5", features = ["derive"] }
ssh2 = "0.9.4"
flate2 = "1.0.27"
tar = "0.4.40"
thiserror = "1.0.49"
aws-smithy-http = "0.56.1"
http = "0.2.9"
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = "0.3.17"